--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -73,13 +73,44 @@ body {
     border-top: none;
     border-bottom: none;
     display: flex;
+    height: 1000px;
 }
 
 .filters {
     width: 20%;
     height: 100%;
     border-right: 1px solid white;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+}
+.filters_cont{
+    display: inline-block;
+}
+.filter_circle {
+    height: 100px;
+    border-radius: 20px;
+    border: 1px solid white;
+    padding: 2% 0;
+    background-color: white;
+    opacity: 70%;
+    max-width: 250px;
+    width: 250px;
+    margin: 10% 0;
+}
+.filter_circle p {
+    color: rgb(24, 24, 24);;
 }
 .main {
     width: 80%;
+}
+
+/* FOOTER  */
+
+footer {
+    width: 100%;
+    height: 30px;
+    outline: 1px solid white;
+    background-color: black;
 }
