--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -74,13 +74,14 @@ body {
     border-top: none;
     border-bottom: none;
     display: flex;
-    height: 1000px;
+    height: 100%;
+    padding: 0 2%;
 }
-
+.body {
+    height: 100%;
+}
 .filters {
     width: 20%;
-    height: 100%;
-    border-right: 1px solid white;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -90,31 +91,41 @@ body {
     display: inline-block;
 }
 .filter_circle {
-    height: 100px;
+    height: 200px;
     border-radius: 20px;
     border: 1px solid white;
     padding: 2% 0;
     background-color: white;
     opacity: 70%;
+    width: 300px;
 }
+
 .filter_circle p {
-    color: rgb(24, 24, 24);;
+    color: rgb(24, 24, 24);
+    margin: 20px 2%;
+    font-size: 20px;
+    cursor: pointer;
 }
 .main {
     width: 80%;
     padding: 2% 2%;
 }
 .main_cont{
+    display: inline-block;
+}
+.main_content div{
     display: flex;
-
-}
-
-
-/* FOOTER  */
-
-footer {
     width: 100%;
-    height: 30px;
-    outline: 1px solid white;
-    background-color: black;
+    margin-bottom: 2%;
 }
+.main_content p{
+    margin-top: 1%;
+    color: rgb(196, 196, 196);
+}
+.main_content div img{
+    height: 50%;
+    width: 350px;
+    margin-right: 5%;
+}
+
+
